# uwu.dating

./: .gitignore  Dockerfile  README.md  pyproject.toml  wsgi.py
.github/workflows/: docker-publish.yml
uwu_dating/: __init__.py  db.py  model.py  prometheus.py  questions.sql  schema.sql  utils.py
uwu_dating/bp/: lobby.py  message.py  poke.py  question.py  user.py  welcome.py
uwu_dating/static/: style.css
uwu_dating/templates/: base.html  lobby.html  message.html  question.html  welcome.html
uwu_dating/templates/user/: create.html  me.html  profile.html
