[project]
name = "uwu-dating"
version = "0.1.0"
description = ""
authors = [
    {name = "klegul", email = "gregor@klegul.de"}
]
packages = [{include = "uwu_dating"}]
requires-python = ">=3.14"
dependencies = [
    "flask==3.1.2",
    "Flask-SocketIO==5.5.1",
    "requests==2.32.5",
    "prometheus-client==0.23.1",
    "flask-apscheduler==1.13.1",
    "gunicorn==23.0.0",
    "gevent-websocket>=0.10.1",
    "markupsafe>=3.0.3",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
